start of explanation